--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "git-latest-semver-tag": "^1.0.2",
     "simple-git": "^1.75.0"
   }
 }
