Renamed lumo_npm_clojurescript_example -> lumo_npm_example

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lumo-npm-clojurescript-example",
+  "name": "lumo-npm-example",
   "version": "0.1.0",
   "description": "Example How to Call Non-Trivial NPM Libraries in lumo / clojurescript",
   "main": "index.js",
