--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
     "name": "lumo-npm-example",
-    "version": "0.1.1",
+    "version": "0.1.3",
     "description": "Example How to Call Non-Trivial NPM Libraries in lumo / clojurescript",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+    "main": "bin/lumo-npm-example",
+    "directories": {
+        "lib": "lib"
+    },
+    "bin": {
         "lumo-npm-example": "bin/lumo-npm-example"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Robert J. Berger",
     "license": "MIT",
@@ -13,6 +18,10 @@
         "type": "git",
         "url": "https://github.com/rberger/lumo-npm-example.git"
     },
+    "bugs": {
+        "url": "https://github.com/rberger/lumo-npm-example/issues"
+    },
+    "homepage": "https://github.com/rberger/lumo-npm-example#readme",
     "dependencies": {
         "git-latest-semver-tag": "^1.0.2",
         "simple-git": "^1.75.0",
