--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "homepage": "https://github.com/rberger/lumo-npm-example#readme",
     "dependencies": {
         "git-latest-semver-tag": "^1.0.2",
-        "simple-git": "^1.75.0",
-        "lumo-cljs": "1.6.0"
+        "lumo-cljs": "1.10.1",
+        "simple-git": "^1.75.0"
     }
 }
